--- a/lang/cs-CZ.json
+++ b/lang/cs-CZ.json
@@ -8,8 +8,8 @@
     "extremeGamesDesc": "Zobrazovat hry se sexuálním, násilným nebo jiným obsahem, který není vhodný pro děti.",
     "enableEditing": "Povolit upravování",
     "enableEditingDesc": "Povolí editaci her, doplňkových aplikací a seznamů. Také zobrazí záložku 'Kurátor'.",
-    "onDemandImages": "On Demand Images",
-    "onDemandImagesDesc": "Download and save missing logos and screenshots as they are needed.",
+    "onDemandImages": "Obeázky na vyžádání",
+    "onDemandImagesDesc": "Stahovat a ukládat chybějící screenshoty a náhledy podle potřeby",
     "currentLanguage": "Jazyk",
     "currentLanguageDesc": "Jazyk, který bude program primárně používat.",
     "fallbackLanguage": "Záložní jazyk",
@@ -33,9 +33,9 @@
     "showDeveloperTab": "Zobrazit záložku pro vývojáře",
     "showDeveloperTabDesc": "Zobrazí záložku 'Vývojář'. S největší pravděpodobností užitečné pouze pro vývojáře a kurátory.",
     "server": "Server",
-    "serverDesc": "Which Server Process to run at launcher startup.",
+    "serverDesc": "Server proces ke spuštění při zapínání launcheru",
     "metadataServerHost": "Metadata Server Host",
-    "metadataServerHostDesc": "Host of a metadata server. Used for syncing new and updated game info to the launcher.",
+    "metadataServerHostDesc": "Hostitel metadata serveru. Používáno pro synchronizaci informací nových a aktualizovaných her v launcheru.",
     "saveAndRestart": "Uložit a restartovat"
   },
   "home": {
@@ -55,7 +55,7 @@
     "configInfo": "Chcete něco změnit? Běžte do {0}.",
     "config": "Nastavení",
     "helpInfo": "Potřebujete pomoc? {0}.",
-    "help": "Read the manual",
+    "help": "Přečtěte si nápovědu",
     "upgradesHeader": "Vylepšení",
     "installComplete": "Instalace dokončena",
     "alreadyInstalled": "Již nainstalováno",
@@ -68,24 +68,24 @@
     "filterByPlatform": "Filtrovat podle platformy",
     "plannedFeatures": "Mrkněte na naše plánované funkce!",
     "notesHeader": "Poznámky",
-    "notes": "Don't forget to read the manual if you're having issues.",
+    "notes": "V případě, že máte problémy, se nezapomeňte podívat do nápovědy.",
     "linuxSupport": "Problémy na Linuxu? {0}",
     "linuxSupportLinkText": "Otevřít FAQ",
     "randomPicks": "Náhodný výběr",
-    "rerollPicks": "Re-Roll Picks"
+    "rerollPicks": "Obnovit výběr"
   },
   "logs": {
     "filters": "Filtry",
     "copyText": "Zkopírovat text",
     "clearLog": "Vymazat logy",
-    "copy404Urls": "Copy 404 URLs",
-    "uploadLog": "Upload Log",
-    "copiedToClipboard": "Copied to Clipboard"
+    "copy404Urls": "Zkopírovat 404 URL adresy",
+    "uploadLog": "Nahrát Log",
+    "copiedToClipboard": "Zkopírováno do Schránky"
   },
   "app": {
     "home": "Domů",
     "browse": "Procházet",
-    "tags": "Tags",
+    "tags": "Štítky",
     "categories": "Kategorie",
     "logs": "Logy",
     "config": "Nastavení",
@@ -129,20 +129,20 @@
     "checkPlaylistsDesc": "Vypíše všechny seznamy, které mají neplatné nebo duplicitní ID, anebo obsahují hry s neplatným, duplicitním nebo chybějícím ID",
     "checkGameFileLocation": "Zkontrolovat umístění herních souborů",
     "checkGameFileLocationDesc": "Vypíše všechny hry, které mají chybou cestu ve spouštěcím příkazu (týká se 'Otevřít umístění souboru', nikoliv spouštění hry)",
-    "checkMissingExecMappings": "Check Missing Exec Mappings",
-    "checkMissingExecMappingsDesc": "List all unique execs for win32, linux and darwin which are missing an exec mapping",
+    "checkMissingExecMappings": "Zkontrolovat Chybějící Mappingy Exekutiv",
+    "checkMissingExecMappingsDesc": "Vypíše všechny unikátní exekutivy pro win32, linux a darwin kterým chybí mapping",
     "renameImagesTitleToId": "Přejmenovat obrázky (název => ID)",
     "renameImagesTitleToIdDesc": "Najde všechny obrázky, které mají ve jméně souboru název hry a přejmenuje je na ID",
     "renameImagesIdToTitle": "Přejmenovat obrázky (ID => název)",
     "renameImagesIdToTitleDesc": "Najde všechny obrázky, které mají ve jméně souboru ID a přejmenuje je na název hry",
     "createMissingFolders": "Vytvořit chybějící složky",
     "createMissingFoldersDesc": "Najde všechny složky, které chybí v definované Flashpoint struktuře složek a vytvoří je",
-    "importLegacyPlatforms": "Import Legacy Platforms",
-    "importLegacyPlatformsDesc": "Imports Legacy Platforms from `Data/Platforms/` - WARNING: Will overwrite conflicting games",
-    "importLegacyPlaylists": "Import Legacy Playlists",
-    "importLegacyPlaylistsDesc": "Imports Legacy Playlists from `/Data/Playlists`",
-    "importMetaEdits": "Import Meta Edits",
-    "importMetaEditsDesc": "Imports ALL Meta Edits from `/Data/MetaEdits`",
+    "importLegacyPlatforms": "Importovat Legacy Platformy",
+    "importLegacyPlatformsDesc": "Importuje Legacy Platformy z `Data/Platforms/` - POZOR: Přepíše hry s konflikty",
+    "importLegacyPlaylists": "Importovat Legacy Seznamy",
+    "importLegacyPlaylistsDesc": "Importuje Legacy Seznamy z `/Data/Playlists`",
+    "importMetaEdits": "Importovat Editace Metadat",
+    "importMetaEditsDesc": "Importuje VŠECHNY Editace Metadat z `/Data/MetaEdits`",
     "servicesHeader": "Služby na pozadí",
     "servicesMissing": "Nebyly nalezeny žádné služby.",
     "running": "Spuštěno",
@@ -178,7 +178,7 @@
     "noAlternateTitles": "Žádné alternativní názvy",
     "tags": "Štítky",
     "noTags": "Žádné štítky",
-    "enterTag": "Enter Tag",
+    "enterTag": "Zadejte Štítek",
     "series": "Série",
     "noSeries": "Žádná série",
     "publisher": "Vydavatel",
@@ -216,7 +216,7 @@
     "noApplicationPath": "Žádná cesta k aplikaci",
     "launchCommand": "Spouštěcí příkaz",
     "noLaunchCommand": "Žádný spouštěcí příkaz",
-    "searching": "Searching...",
+    "searching": "Vyhledávání...",
     "library": "Knihovna",
     "defaultLibrary": "Výchozí knihovna",
     "thumbnail": "Miniatura",
@@ -232,7 +232,7 @@
     "editGame": "Upravit hru",
     "allGames": "Všechny hry",
     "newPlaylist": "Nový seznam",
-    "importPlaylist": "Import Playlist",
+    "importPlaylist": "Importovat Seznam",
     "emptyPlaylist": "Prázdný seznam",
     "noGamesFound": "Nebyly nalezeny žádné hry!",
     "dropGameOnLeft": "Hru vložíte přetažením do seznamu {0}.",
@@ -247,26 +247,26 @@
     "noGameMatchedSearch": "Zkuste méně omezit výběr hledání."
   },
   "tags": {
-    "noName": "No Name",
-    "description": "Description",
+    "noName": "Žádný název",
+    "description": "Popis",
     "noDescription": "Žádný popis",
     "category": "Kategorie",
     "noCategory": "Bez kategorie",
-    "newCategory": "New Category",
-    "enterAlias": "Enter Alias",
-    "aliases": "Aliases",
-    "editTag": "Edit Tag",
-    "color": "Color",
-    "noTagSelected": "No Tag Selected",
-    "clickToSelectTag": "Click to select Tag",
-    "deleteTagAlias": "Delete Tag Alias",
-    "setPrimaryAlias": "Set Primary Alias",
-    "mergeIntoTag": "Merge into Tag",
-    "mergeTag": "Merge Tag",
-    "makeAliasWhenMerged": "Make this an alias of the tag?",
-    "deleteTag": "Delete Tag",
-    "deleteTagCategory": "Delete Tag Category",
-    "locked": "Locked while processing..."
+    "newCategory": "Nová Kategorie",
+    "enterAlias": "Zadejte Alias",
+    "aliases": "Aliasy",
+    "editTag": "Upravit Štítek",
+    "color": "Barva",
+    "noTagSelected": "Žádný Štítek Nevybrán",
+    "clickToSelectTag": "Klikněte pro výběr Štítku",
+    "deleteTagAlias": "Odstranit Alias Štítku",
+    "setPrimaryAlias": "Nastavit Primární Alias",
+    "mergeIntoTag": "Sloučit do Štítku",
+    "mergeTag": "Sloučit Štítek",
+    "makeAliasWhenMerged": "Učinit z tohoto Alias Štítku?",
+    "deleteTag": "Odstranit Štítek",
+    "deleteTagCategory": "Odstranit Kategorii Štítků",
+    "locked": "Uzamčeno během zpracovávání..."
   },
   "curate": {
     "importAll": "Importovat vše",
@@ -277,9 +277,9 @@
     "openCurationsFolder": "Složka kurací",
     "openCurationsFolderDesc": "Otevřít složku kurací v Průzkumníku",
     "openExportsFolder": "Exportované kurace",
-    "openExportsFolderDesc": "Open the default Exports folder containing your exported curations.",
+    "openExportsFolderDesc": "Otevřít základní složku Exportů obsahující vaše exportované kurace.",
     "openImportedFolder": "Importované kurace",
-    "openImportedFolderDesc": "Open the default Imported curations folder containing your imported curations.",
+    "openImportedFolderDesc": "Otevřít základní složku Importů obsahující vaše importované kurace.",
     "newCuration": "Nová kurace",
     "newCurationDesc": "Vytvoří novou kuraci ve zvláštní složce",
     "loadMeta": "Načíst metadata",
@@ -292,14 +292,14 @@
     "id": "Složka kurace",
     "heading": "Nadpis",
     "noHeading": "Žádný nadpis",
-    "folderName": "Extras Folder",
+    "folderName": "Složky Extras",
     "noFolderName": "Chybí název složky",
     "message": "Zpráva při spuštění",
     "noMessage": "Žádná zpráva",
     "curationNotes": "Kurátorské poznámky",
     "noCurationNotes": "Žádné kurátorské poznámky",
     "newAddApp": "Nová aplikace",
-    "addExtras": "Add Extras",
+    "addExtras": "Přidat Extras",
     "addMessage": "Přidat zprávu",
     "removeAddApp": "Odstranit aplikaci",
     "indexContent": "Aktualizovat obsah",
@@ -307,21 +307,21 @@
     "deleteCurationDesc": "Smazat tuto kuraci (soubory nelze obnovit)",
     "openFolder": "Otevřít složku",
     "run": "Spustit",
-    "runWithMAD4FP": "Run with MAD4FP",
+    "runWithMAD4FP": "Spustit s MAD4FP",
     "export": "Exportovat",
     "import": "Importovat",
     "contentFiles": "Soubory s obsahem",
     "warnings": "Varování",
-    "noLaunchCommand": "'Launch Command' is a required field. Please fill it in before importing.",
-    "invalidLaunchCommand": "'Launch Command' does not fit these URL requirements:",
+    "noLaunchCommand": "'Spouštěcí příkaz' je povinné pole. Před importováním jej prosím vyplňte.",
+    "invalidLaunchCommand": "'Spouštěcí příkaz' nesplňuje následující URL požadavky:",
     "releaseDateInvalid": "'Datum vydání' musí být ve formátu YYYY-MM-DD (měsíc a den jsou volitelné).",
     "unusedApplicationPath": "'Cesta podružné aplikace' se nepoužívá. Ujistěte se, že je napsána správně!",
-    "unusedTags": "The following tags are not present on any other game. Are they correct?",
+    "unusedTags": "Následující štítky nejsou používány u žádné další hry. Jsou napsané správně?",
     "unusedPlatform": "'Platforma' se nepoužívá. Ujistěte se, že je napsána správně!",
     "nonExistingLibrary": "'Knihovna' není název existující knihovny! (Bude použita výchozí)",
-    "nonContentFolders": "Non-Content folders found in Curation folder. Are they supposed to be there?",
+    "nonContentFolders": "Složky bez obsahu nalezeny ve složce Kurace. Opravdu tam mají být?",
     "ilc_notHttp": "Použít HTTP.",
-    "ilc_nonExistant": "Point to an existing file in your curation's 'content' folder."
+    "ilc_nonExistant": "Míří na existující soubor ve složce 'content' ve vaší složce kurace folder."
   },
   "playlist": {
     "enterDescriptionHere": "Zadejte popis...",
@@ -331,12 +331,12 @@
     "discard": "Zahodit",
     "discardDesc": "Zahodí provedené změny a ukončit editaci",
     "edit": "Upravit",
-    "editDesc": "Upravit tento playlist",
+    "editDesc": "Upravit tento seznam",
     "delete": "Smazat",
     "deleteDesc": "Smaže tento seznam",
-    "changeIcon": "Change Playlist Icon",
-    "duplicatePlaylistDesc": "Duplicate Playlist",
-    "exportPlaylistDesc": "Export playlist to a file",
+    "changeIcon": "Změnit ikonu seznamu",
+    "duplicatePlaylistDesc": "Duplikovat seznam",
+    "exportPlaylistDesc": "Exportovat seznam do souboru",
     "areYouSure": "Jste si jisti?",
     "noTitle": "Žádný název",
     "titlePlaceholder": "Název...",
@@ -356,8 +356,8 @@
     "extracting": "Rozbaluji",
     "installingFiles": "Instaluji soubory...",
     "complete": "Dokončeno",
-    "exportMetaEditTitle": "Export Meta Edit",
-    "exportMetaEditDesc": "Select all properties to export:"
+    "exportMetaEditTitle": "Exportovat úpravy metadat",
+    "exportMetaEditDesc": "Vyberte všechny vlastnosti k exportu:"
   },
   "menu": {
     "viewThumbnailInFolder": "Otevřít složku s umístěním miniatury",
@@ -379,9 +379,9 @@
     "fileNotFound": "Soubor nebyl nenalezen!",
     "flashpointPathInvalid": "Cesta k Flashpoint je neplatná!",
     "pathNotFound": "Cesta nebyla nalezena!",
-    "playlistConflict": "Playlist Conflict",
-    "importedPlaylistAlreadyExists": "Imported playlist already exists! - '{0}'",
-    "mergeOrStaySeperate": "Should they merge into one, or stay as seperate playlists?",
+    "playlistConflict": "Konflikt Seznamů",
+    "importedPlaylistAlreadyExists": "Importovaný seznam již existuje! - '{0}'",
+    "mergeOrStaySeperate": "Měly by se sloučit do jednoho, nebo zůstat oddělené?",
     "selectFileToExportMeta": "Vybrat soubor pro uložení metadat",
     "selectFolderToExportMetaAndImages": "Vybrat složku pro uložení metadat a obrázků",
     "replaceFilesQuestion": "Nahradit soubory?",
@@ -392,8 +392,8 @@
     "selectCurationFolder": "Vybrat složky",
     "selectCurationArchive": "Vybrat archívy",
     "selectCurationMeta": "Vybrat metadata",
-    "selectPlaylistToImport": "Select Playlist to Import",
-    "selectFileToExportPlaylist": "Select file to save the Playlist to",
+    "selectPlaylistToImport": "Vyberte seznam k Importu",
+    "selectFileToExportPlaylist": "Vyberte soubor pro uložení Seznamu",
     "dataRequired": "Jsou potřebná další data",
     "dataRequiredDesc": "Před použitím spouštěče musíte nainstalovat aktualizaci z domovské obrazovky.\n\nPřejete si to nyní provést?",
     "upgradeWillInstallTo": "{0} bude nainstalován do",
@@ -403,17 +403,17 @@
     "areYouSure": "Jste si jisti?",
     "cancel": "Zrušit",
     "mergePlaylists": "Sloučit playlisty",
-    "newPlaylist": "Stay Seperate",
-    "uploadPrivacyWarning": "This will make your Logs available publically.\nA link will be copied to your clipboard.\n\nAre you sure?",
-    "overwriteFileTitle": "File already exists!",
-    "overwriteFileMessage": "A file with the same name already exists. Do you want to overwrite it?",
-    "overwriteFileDetail": "File path:"
+    "newPlaylist": "Nechat oddělené",
+    "uploadPrivacyWarning": "Toto udělá vaše Logy dostupné veřejně.\nOdkaz bude zkopírován do schránky.\n\nJste si jistý?",
+    "overwriteFileTitle": "Soubor již existuje!",
+    "overwriteFileMessage": "Soubor se stejným názvem již existuje. Přejete si jej přepsat?",
+    "overwriteFileDetail": "Cesta k souboru:"
   },
   "libraries": {
     "arcade": "Hry",
-    "arcadePlural": "All Games",
+    "arcadePlural": "Všechny Hry",
     "theatre": "Animace",
-    "theatrePlural": "All Animations"
+    "theatrePlural": "Všechny Animace"
   },
   "upgrades": {
     "infinity": "Flashpoint Infinity",
